cang porperty file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,8 @@ spring.datasource.password=
 
 spring.jpa.hibernate.dll-auto=create
 
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
 
 spring.jackson.serialization.fail-on-empty-beans=false
+
+
