--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/chatroom?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC&zeroDateTimeBehavior=convertToNull
-spring.datasource.password=
+spring.datasource.username=admin
+spring.datasource.password=password
 
 
 spring.jpa.hibernate.dll-auto=create
