--- a/pom.xml
+++ b/pom.xml
@@ -10,8 +10,8 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>ch.apprentice</groupId>
-	<artifactId>chatroom</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<artifactId>RemosChatroom</artifactId>
+	<version>1.0</version>
 	<name>chatroom</name>
 	<description>A litel project for aprentice</description>
 
